# ds-r1_rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: ci.yml
.github/workflows/: bench.yml  ci.yml  docs.yml
bench/: decoding.rs
configs/: mixed_depth_mla_moe.json  mla_all_layers.json  moe_all_layers.json
examples/: code_reasoning_demo.rs  config_demo.rs  evaluation_demo.rs  generation_demo.rs  math_dataset_demo.rs  math_solver_demo.rs  mla_moe_integration_demo.rs  moe_demo.rs  reasoning_demo.rs  synthetic_data_demo.rs  training_demo.rs
src/: lib.rs  main.rs
src/inference/: code_analyzer.rs  engine.rs  generation.rs  math_solver.rs  mod.rs  reasoning.rs  sampling.rs
src/model/: attention.rs  config.rs  embeddings.rs  layers.rs  mod.rs  moe.rs  parameters.rs  transformer.rs
src/training/: code_dataset.rs  data.rs  loss.rs  math_dataset.rs  mod.rs  optimizer.rs  test_datasets.rs  trainer.rs
src/utils/: checkpoint.rs  error.rs  evaluation.rs  evaluation_reports.rs  math.rs  mod.rs  test_datasets.rs  tokenizer.rs
tests/: cli_integration.rs
