[package]
name = "ds-r1-rs"
version = "0.1.0"
edition = "2024"
authors = ["Khaled"]
description = "A DeepSeek R1-inspired reasoning model prototype in Rust"
license = "MIT"

[lib]
name = "ds_r1_rs"
path = "src/lib.rs"

[[bin]]
name = "ds-r1-rs"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Random number generation
rand = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing framework
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.0"

# Benchmarking
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
