[package]
name = "ds-r1-rs"
version = "0.1.1"
edition = "2024"
authors = ["khaled"]
description = "A DeepSeek R1-inspired reasoning model prototype in Rust"
license = "MIT"
repository = "https://github.com/k5602/ds-r1_rs"
homepage = "https://github.com/k5602/ds-r1_rs"
documentation = "https://docs.rs/ds-r1-rs"
readme = "README.md"
keywords = ["deepseek", "transformer", "reasoning", "ml", "nlp"]
categories = ["science", "algorithms", "command-line-utilities"]

[lib]
name = "ds_r1_rs"
path = "src/lib.rs"

[[bin]]
name = "ds-r1-rs"
path = "src/main.rs"

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#tokenization
tiktoken-rs = "0.7.0"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Random number generation
rand = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing framework
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.0"

# Benchmarking
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "decoding"
path = "bench/decoding.rs"
harness = false
